<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/incoming_notifications"
            android:key="incoming_notifications"
            android:selectable="false">

        <CheckBoxPreference
                android:key="notifications_new_file_send"
                android:title="@string/pref_title_use_default_notifications"
                android:defaultValue="false"/>

        <RingtonePreference
                android:dependency="notifications_new_file_send"
                android:key="notifications_new_file_send_ringtone"
                android:title="@string/pref_title_ringtone"
                android:ringtoneType="all"
                android:summary="@string/settings_notification_ringtone_summary"
                android:defaultValue="content://settings/system/notification_sound"/>

        <SwitchPreference
                android:dependency="notifications_new_file_send"
                android:key="notifications_new_file_send_vibrate"
                android:title="@string/pref_title_vibrate"
                android:defaultValue="true"/>

        <ListPreference
                android:dependency="notifications_new_file_send"
                android:key="notifications_new_file_send_led_light"
                android:title="@string/pref_title_light"
                android:entries="@array/pref_light_titles"
                android:entryValues="@array/pref_light_values"
                android:defaultValue="@string/cyan_color"
                android:negativeButtonText="@null"
                android:positiveButtonText="@null"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/outgoing_notifications"
            android:key="outgoing_notifications"
            android:selectable="false">

        <CheckBoxPreference
                android:key="notifications_new_file_receive"
                android:title="@string/pref_title_use_default_notifications"
                android:defaultValue="false"/>

        <RingtonePreference
                android:dependency="notifications_new_file_receive"
                android:key="notifications_new_file_receive_ringtone"
                android:title="@string/pref_title_ringtone"
                android:ringtoneType="all"
                android:summary="@string/settings_notification_ringtone_summary"
                android:defaultValue="content://settings/system/notification_sound"/>

        <SwitchPreference
                android:dependency="notifications_new_file_receive"
                android:key="notifications_new_file_receive_vibrate"
                android:title="@string/pref_title_vibrate"
                android:defaultValue="true"/>

        <ListPreference
                android:dependency="notifications_new_file_receive"
                android:key="notifications_new_file_receive_led_light"
                android:title="@string/pref_title_light"
                android:entries="@array/pref_light_titles"
                android:entryValues="@array/pref_light_values"
                android:defaultValue="@string/cyan_color"
                android:negativeButtonText="@null"
                android:positiveButtonText="@null"/>
    </PreferenceCategory>
</PreferenceScreen>
