<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/details_view"
        android:orientation="horizontal"
        android:visibility="visible">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/root"
            android:visibility="visible">

        <Button
                android:text="@string/photo_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/photo_camera_action"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/buttons_background"/>

        <Button
                android:id="@+id/video_camera_action"
                android:text="@string/video_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/photo_camera_action"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/buttons_background"/>

        <Button
                android:id="@+id/media_action"
                android:text="@string/pick_media"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/video_camera_action"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/buttons_background"/>

        <Button
                android:id="@+id/file_action"
                android:text="@string/pick_a_file"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.548"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/media_action"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/buttons_background"/>

        <Button
                android:id="@+id/pick_app_action"
                android:text="@string/pick_an_app"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/file_action"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/buttons_background"/>

        <Button
                android:id="@+id/disconnect_action"
                android:text="@string/disconnect_peer_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/pick_app_action"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"/>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
